Update debug mixin to lean on pfe-print-local mixin #singlesourceoftruth Rearrange & de-dupe selectors in pfe-tab sass file Fix vertical variants on mobile

--- a/elements/pfe-sass/mixins/_mixins.scss
+++ b/elements/pfe-sass/mixins/_mixins.scss
@@ -113,23 +113,6 @@
 // This will print the $LOCAL-VARIABLES map for debugging within components
 @mixin pfe-local-debug($map: $LOCAL-VARIABLES) {
   :root {
-      @each $property, $value in $map {
-        $name: "--#{$property}";
-        $styles: $value;
-
-        @if type-of($value) == "map" {
-            @each $prop, $v in $value {
-                $name: "__#{$property}--#{$prop}";
-                $styles: $v;
-
-                // Print the variable definition
-                --#{$repo}-#{$LOCAL}#{$name}: #{$styles};
-            }
-        }
-        @else {
-            // Print the variable definition
-            --#{$repo}-#{$LOCAL}#{$name}: #{$styles};
-        }
-    }
+      @include pfe-print-local($map);
   }
 }
