--- a/elements/pfe-tabs/src/pfe-tabs.scss
+++ b/elements/pfe-tabs/src/pfe-tabs.scss
@@ -137,31 +137,36 @@ $LOCAL-VARIABLES: map-deep-merge($LOCAL-VARIABLES, (
 @include pfe-theme-contexts; // imports on="light" etc support
 
 
-  // Styles for vertical wind tab to have the left bad extend past the tabset 
-:host([vertical][pfe-variant="wind"]) .tabs-prefix {
-  left: 0px;
-  top: 0px;
-  content: " ";
-  height: 32px;
-  width: 1px;
-  background-color: pfe-local(BorderColor, $region: tabs);
-  position: relative;
-}
-:host([vertical][pfe-variant="wind"]) .tabs-suffix {
-  left: 0px;
-  top: 0px;
-  content: " ";
-  height: 32px;
-  width: 1px;
-  background-color: pfe-local(BorderColor, $region: tabs);
-  position: relative;
-}
+/// ===========================================================================
+/// INSET NOTCH
+/// ===========================================================================
 
-:host(:not([vertical])[pfe-variant="earth"]) .tabs-prefix {
-  left: 0px;
-  top: 0px;
-  content: " ";
-  height: 1px;
-  width: 10px;
-  position: relative;
+@media screen and (min-width: #{pfe-breakpoint(md)}) {
+  :host([vertical][pfe-variant="wind"]) .tabs-prefix {
+    left: 0px;
+    top: 0px;
+    content: " ";
+    height: 32px;
+    width: 1px;
+    background-color: pfe-local(BorderColor, $region: tabs);
+    position: relative;
+  }
+  :host([vertical][pfe-variant="wind"]) .tabs-suffix {
+    left: 0px;
+    top: 0px;
+    content: " ";
+    height: 32px;
+    width: 1px;
+    background-color: pfe-local(BorderColor, $region: tabs);
+    position: relative;
+  }
+
+  :host(:not([vertical])[pfe-variant="earth"]) .tabs-prefix {
+    left: 0px;
+    top: 0px;
+    content: " ";
+    height: 1px;
+    width: calc(#{pfe-var(container-padding)} * 2);
+    position: relative;
+  }
 }
